# octoxlabs-search-microservices

./: .gitignore  OctoxlabsSeniorBackendEngineerCaseStudy.md  README.md  dev_run.sh  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  pytest.ini
api/search/: authentication.py  messaging.py  serializers.py  tests.py  urls.py
api/src/core/: settings.py  urls.py
api/src/core/settings/: __init__.py  base.py  development.py  production.py  staging.py
api/src/search/: admin.py  authentication.py  messaging.py  models.py  pagination.py  serializers.py  services.py  tests.py  throttles.py  urls.py  views.py
api/src/search/management/: __init__.py
api/src/search/management/commands/: load_dummy_data.py  search_cli.py
elasticsearch/: init-data.sh
logger_service/: .env.example  Dockerfile  pyproject.toml
logger_service/src/app/: main.py
logger_service/src/app/api/v1/: __init__.py  health_route.py
logger_service/src/app/core/: config.py  database.py  logger.py  logging.py  setup.py
logger_service/src/app/services/: receiver.py  transmitter.py
octoapi/: docker-entrypoint.sh  pyproject.toml  pytest.ini
octoapi/src/core/: urls.py
octoapi/src/core/settings/: __init__.py  development.py  staging.py
octoapi/src/search/: messaging.py  throttles.py  urls.py  views.py
octoapi/src/search/management/: __init__.py
octoapi/src/search/management/commands/: load_dummy_data.py  search_cli.py
query_converter/: .env.example  Dockerfile  pyproject.toml
query_converter/src/app/: main.py
query_converter/src/app/api/: dependencies.py
query_converter/src/app/api/v1/: __init__.py  health_route.py  query_route.py
query_converter/src/app/core/: config.py  logger.py  setup.py
query_converter/src/app/schemas/: query_schema.py
query_converter/src/app/services/: converter_service.py
query_converter/tests/unit/src/app/services/: test_converter_service.py
