[tool.poetry]
name = "query_converter"
version = "1.0.0"
description = "Query Converter API"
authors = ["Burak Ece <burakece9191@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
pydantic = { extras = ["email"], version = "^2.6.1" }
fastapi = "^0.109.1"
uvicorn = "^0.27.0"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
